--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
             <button type="submit" class="btn btn-primary">Agregar Base</button>
         </form>
+        <div id="mensaje1">
+        </div>
     </div>
     <div>
         <h1 class="Titulo"> Obtener tarjeta de trabajo!</h1>
@@ -32,15 +34,17 @@
             </div>
             <div>
                 <label for="horainicio">horario de inicio:</label>
-                <input type="datetime" id="horainicio">
+                <input type="time" id="horainicio">
             </div>
             <div>
                 <label for="horafin">Horario finalizar:</label>
-                <input type="datetime" id="horafin">
+                <input type="time" id="horafin">
             </div>
 
             <button type="submit" class="btn btn-primary">Obtener Tarjeta de trabajo</button>
         </form>
+        <div id="mensaje2">
+        </div>
     </div>
 </body>
 <script src="app.js" type="module"></script>
