--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
     <div>
         <h1 class="Titulo"> Bases!</h1>
-        <form id="formulario1" action="#">
             <div>
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" placeholder="Nombre Base">
@@ -20,8 +19,10 @@
                 <input type="text" id="minutos" placeholder="minutos">
             </div>
 
-            <button type="submit" class="btn btn-primary">Agregar Base</button>
-        </form>
+            <button id="agregar" class="btn btn-primary">Agregar</button>
+            <button id="buscar" class="btn btn-primary">Buscar</button>
+            <button id="eliminar" class="btn btn-primary">Eliminar</button>
+            <button id="insertar" class="btn btn-primary">Insertar</button>
         <div id="mensaje1">
         </div>
     </div>
