casi terminado (faltan detalles)

--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
                 <label for="minutos">Tiempo (minutos):</label>
                 <input type="text" id="minutos" placeholder="minutos">
             </div>
+            <div>
+                <label>Posicion (opcional):</label>
+                <input type="text" id="posicion">
+            </div>
 
             <button id="agregar" class="btn btn-primary">Agregar</button>
             <button id="buscar" class="btn btn-primary">Buscar</button>
             <button id="eliminar" class="btn btn-primary">Eliminar</button>
+
             <button id="insertar" class="btn btn-primary">Insertar</button>
         <div id="mensaje1">
         </div>
